added images/updated files

--- a/index.html
+++ b/index.html
@@ -19,25 +19,23 @@
 
 <body>
 
-<img id="logo" src="./Assets/Images/title.png">
-<h1>Word Guess</h1><br>
+  <img id="logo" src="./Assets/Images/title.png">
+     
+  <h1>Word Guess</h1><br>
 
-<p id="currentWord"></p><br>
+  <p id="currentWord"></p><br>
 
-<div id="wordLength"></div>
+  <div id="wordLength"></div><br>
 
-<div id="guessedLetters"></div><br>
+  <div id="guessedLetters"></div><br>
 
-<div id="guessesLeft"></div>
+  <div id="guessesLeft"></div><br>
 
-<div id="totalWins"></div>
+  <div id="totalWins"></div><br>
 
-<div id="totalLosses"></div>
+  <div id="totalLosses"></div><br>
 
-<h2 id="gameEnd"></h2>
-
-
-
+  <h2 id="gameEnd"></h2>
 
 <!-- JavaScript -->
 <script src="./Assets/JavaScript/game.js"></script>
