updating html for image name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <img id="logo" src="./Assets/Images/title.png">
+  <img id="logo" src="./Assets/Images/gametitle.png">
      
   <h1>Word Guess</h1><br>
 
